--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -54,13 +55,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<dependency>
-	      <groupId>org.springframework.boot</groupId>
-	      <artifactId>spring-boot-docker-compose</artifactId>
-	      <scope>runtime</scope>
-	      <optional>true</optional>
-	    </dependency>
 	    
 	</dependencies>
 
@@ -92,5 +86,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
