--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,15 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# SQL
 spring.sql.init.data-locations=classpath:data.sql
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.mode=always
+
+
+
+# Logging
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
